--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,54 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="css/styles.css">
+  
+  <title>Frontend Mentor | Stats preview card component</title>  
+
+  
+</head>
+<body>
+
+  <main class="main">
+
+        <div class="flex container">
+
+          <div class="text-container">
+        
+             <h1 class="title-text">  Get <span>insights</span> that help your business grow.</h1>
+             <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
+             experience, and overall efficiency.</p>
+        
+            <ul>
+               <li><h2>10k+</h2><p>companies</p></li>
+               <li><h2>314</h2><p>templates</p></li>
+               <li><h2>12m+</h2><p>queries</p></li>
+
+              </ul>
+
+
+             </div>
+
+            <img class="images" src="/images/image-header-desktop.jpg" alt="">
 
 
 
+         </div>
 
 
+
+  </main>
+
+
+   
+
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Daniel Rocha</a>.
+  </div>
+</body>
 </html>
